--- a/index.html
+++ b/index.html
@@ -1,7 +1,3 @@
-<!-- ****IMPORTANT REMINDER****   -->
-<h1>Delete this line and email the link to your workshop page to admin@software-carpentry.org.  If this is a self organized workshop, please be sure to include any other details Software Carpentry staff may need to know in your email.</h1>
-
-
 <!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
 
 ---
@@ -16,7 +12,7 @@ humandate: "Dec 16-17, 1815"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "5:00 pm - 12:30 am"    # human-readable time (e.g., "9:00 am - 4:30 pm")
 startdate: 1815-12-16      # use YYYY-MM-DD format like 2015-01-01
 enddate: 1815-12-17        # use YYYY-MM-DD format like 2015-01-02
-instructor: ["Alby Chaj", "/trvis struck"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
+instructor: ["Alby Chaj", "trvis struck"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Uwe Hilgert"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "bjoyce3@email.arizona.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
 etherpad:         # optional (insert the URL for your Etherpad if you're using one)
