--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@ language: "English"     # language (lowercase two-letter ISO code such as "fr" -
 latlng: "21,329"       # fractional latitude and longitude (e.g., "41.7901128,-87.6007318"; you can use http://www.latlong.net/)
 humandate: "Dec 16-17, 1815"    # human-readable date (e.g., "Feb 17-18, 2020")
 humantime: "5:00 pm - 12:30 am"    # human-readable time (e.g., "9:00 am - 4:30 pm")
-startdate: 1815-12-16      # use YYYY-MM-DD format like 2015-01-01
-enddate: 1815-12-17        # use YYYY-MM-DD format like 2015-01-02
+startdate: "1815-12-16"      # use YYYY-MM-DD format like 2015-01-01
+enddate: "1815-12-17"        # use YYYY-MM-DD format like 2015-01-02
 instructor: ["Alby Chaj", "trvis struck"] # list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"]
 helper: ["Uwe Hilgert"]     # list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"]
 contact: "bjoyce3@email.arizona.edu"      # contact email address for workshop organizer, such as "grace@hopper.org"
