some more quotes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!-- See instructions in the comments below for how to edit specific sections of this workshop template. -->
 
 ---
-layout: workshop      # DON'T CHANGE THIS.
+layout: "workshop"      # DON'T CHANGE THIS.
 root: .               # DON'T CHANGE THIS.
 venue: "Nepal Mountaineering Association Lodge"        # brief name of host site without address (e.g., "Euphoric State University")
 address: "Singu chuil, Ghandruk 33700, Nepali Himalayas"      # street address of workshop (e.g., "123 Forth Street, Blimingen, Euphoria")
